@@ -194,10 +194,6 @@ use vars qw(%deprecated_keywords %automod);
 
     $option{'noexec'} = (defined $opt_noexec);
     $option{'lines'} = (defined $opt_lines);
-    $option{'clearall'} = (defined $opt_clearall);
-    $option{'flushall'} = (defined $opt_flushall);
-    $option{'flushchains'} = (defined $opt_flushchains);
-    $option{'createchains'} = (defined $opt_createchains);
     $option{'automod'} = (defined $opt_automod);
     $option{test} = (defined $opt_test);
 
@@ -206,8 +202,20 @@ use vars qw(%deprecated_keywords %automod);
         $option{lines} = 1;
     }
 
-    print STDERR "Ignoring the obsolete --use/-s option\n"
+    print STDERR "Warning: --automod is deprecated\n"
+      if defined $opt_automod;
+
+    print STDERR "Warning: ignoring the obsolete --use/-s option\n"
       if defined $opt_use;
+
+    print STDERR "Warning: ignoring the obsolete --clearall option\n"
+      if defined $opt_clearall;
+    print STDERR "Warning: ignoring the obsolete --flushall option\n"
+      if defined $opt_flushall;
+    print STDERR "Warning: ignoring the obsolete --flushchains option\n"
+      if defined $opt_flushchains;
+    print STDERR "Warning: ignoring the obsolete --createchains option\n"
+      if defined $opt_createchains;
 
     if (defined $opt_location) {
         $option{'location'} = $opt_location;
@@ -236,10 +244,25 @@ if (defined $option{location}) {
     $option{location} = 'iptables';
 }
 
-# clearing and flushing needs to be done first:
-$option{'clearall'} && clearall();
-$option{'flushall'} && flushall();
+# first reset the firewall
+foreach my $table (@ip_tables_names) {
+    my @chains;
 
+    if ($table eq 'filter') {
+        @chains = qw(INPUT FORWARD OUTPUT);
+    } elsif ($table eq 'nat') {
+        @chains = qw(PREROUTING POSTROUTING OUTPUT);
+    } elsif ($table eq 'mangle') {
+        @chains = qw(PREROUTING INPUT FORWARD OUTPUT POSTROUTING);
+    }
+
+    foreach my $chain (@chains) {
+        push @rules, "$option{location} -t $table -P $chain ACCEPT\n";
+    }
+
+    push @rules, "$option{location} -t $table -F\n";
+    push @rules, "$option{location} -t $table -X\n";
+}
 
 # parse all input recursively
 $verbose && print "Parsing files\n";
@@ -890,44 +913,25 @@ sub tables {
         delete $chains{$rule{table}}{$rule{chain}}{set_policy};
     }
 
-    if ($option{createchains}) {
-        # mark this chain as "non-empty" because we will add stuff to
-        # it now; this flag is later used to check if a custom chain
-        # referenced by "goto" was actually defined
-        $chains{$rule{table}}{$rule{chain}}{non_empty} = 1;
+    # mark this chain as "non-empty" because we will add stuff to
+    # it now; this flag is later used to check if a custom chain
+    # referenced by "goto" was actually defined
+    $chains{$rule{table}}{$rule{chain}}{non_empty} = 1;
 
-        # check if the chain is already defined
-        unless (exists $chains{$rule{table}}{$rule{chain}}{was_created} or
-                is_netfilter_builtin_chain($rule{table}, $rule{chain})) {
-            push @rules, $rrr . "-N $rule{chain}\n";
-            $chains{$rule{table}}{$rule{chain}}{was_created} = 1;
-        }
-
-        # check for unknown jump target
-        if (defined $rule{action} and
-            not is_netfilter_builtin_target($rule{action}) and
-            $rule{action} ne 'NOP' and
-            not exists $chains{$rule{table}}{$rule{action}}{was_created}) {
-            push @rules, $rrr . "-N $rule{action}\n";
-            $chains{$rule{table}}{$rule{action}}{was_created} = 1;
-        }
+    # check if the chain is already defined
+    unless (exists $chains{$rule{table}}{$rule{chain}}{was_created} or
+            is_netfilter_builtin_chain($rule{table}, $rule{chain})) {
+        push @rules, $rrr . "-N $rule{chain}\n";
+        $chains{$rule{table}}{$rule{chain}}{was_created} = 1;
     }
 
-    # flush neccesary chains before referencing them
-    if ($option{flushchains} and (not $option{flushall} or $option{clearall})) {
-        # check if the chain is already defined
-        unless (exists $chains{$rule{table}}{$rule{chain}}{was_flushed} or
-                is_netfilter_builtin_chain($rule{table}, $rule{chain})) {
-            push @rules, $rrr . "-F $rule{chain}\n";
-            $chains{$rule{table}}{$rule{chain}}{was_flushed} = 1;
-        }
-
-        if (defined $rule{action} and
-            not is_netfilter_builtin_target($rule{action}) and
-            not exists $chains{$rule{table}}{$rule{action}}{was_flushed}) {
-            push @rules, $rrr . "-F $rule{action}\n";
-            $chains{$rule{table}}{$rule{action}}{was_flushed} = 1;
-        }
+    # check for unknown jump target
+    if (defined $rule{action} and
+        not is_netfilter_builtin_target($rule{action}) and
+        $rule{action} ne 'NOP' and
+        not exists $chains{$rule{table}}{$rule{action}}{was_created}) {
+        push @rules, $rrr . "-N $rule{action}\n";
+        $chains{$rule{table}}{$rule{action}}{was_created} = 1;
     }
 
     # return if this is a policy-only rule
@@ -1266,24 +1270,6 @@ sub tables {
     $rr .= "\n";
     push @rules, $rr;
 };
-
-sub clearall {
-    # flush and delete all chains...
-    flushall();
-
-    foreach my $table (@ip_tables_names) {
-        push @rules, "$option{'location'} \-X -t $table\n";
-    }
-}
-
-
-sub flushall {
-    # flush all chains...
-    foreach my $table (@ip_tables_names) {
-        push @rules, "$option{'location'} \-F -t $table\n";
-    }
-}
-
 
 sub printrule {
     my $rule = shift;
@@ -2383,10 +2369,6 @@ B<ferm> I<options> I<inputfiles>
  -v, --verbose     Show some more information
  -d, --debug       Show debug information
  -V, --version     Show current version number
- --clearall        Flush and delete all chains before adding rules
- --flushall        Flush all chains before adding rules
- --createchains    Create all neccesary chains
- --flushchains     Flush all used chains
  -h, --help        Look at this text
  --use [kernel firewall program]
                    Obsolete option, only iptables is supported
